
CHANGELOG

* 2015/05/10:

    - Avoid parsing the entire HTML and look only for link tags.
      This should make 404 faster and use less memory.

    - Show the number of errors in the final stats.

* 2015/05/09:

    - Make a single, lazy get request instead of head/get.
      This is a major performance improvement.

    - Also look for <img src="..."> when crawling.

    - Added links and time statistics and an option to suppress them (--quiet).

    - Added an option to disable redirects (--no-redirects).

    - Bugfix: add the root url to the link cache too.

    - Bugfix: check that the number of threads is positive.

* 2015/05/08:

    - Implemented 'ignore', 'check' and 'follow' for links
      allowing recursive link crawling.

    - Print all http status codes > 400 instead of just 404.

    - Follow redirects.
      May add an option later to turn them off.

    - Check the headers content type when crawling
      to avoid doing get requests when possible.

    - Ignore fragments.

* 2015/05/06:

    - First version.
